--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-firebaseui": "^3.1.2",
+    "react-list": "^0.8.10",
+    "react-redux-firebase": "^2.1.9",
     "react-scripts": "2.1.0"
   },
   "scripts": {
