--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "dependencies": {
     "firebase": "^5.5.6",
     "firebaseui": "^3.4.1",
+    "moment": "^2.22.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-firebaseui": "^3.1.2",
     "react-list": "^0.8.10",
+    "react-redux": "^5.1.0",
     "react-redux-firebase": "^2.1.9",
-    "react-scripts": "2.1.0"
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "save": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
