--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.6.0",
     "react-firebaseui": "^3.1.2",
     "react-list": "^0.8.10",
+    "react-modal": "^3.6.1",
     "react-redux": "^5.1.0",
     "react-redux-firebase": "^2.1.9",
     "react-router": "^4.3.1",
@@ -17,7 +18,8 @@
     "react-scripts": "2.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "save": "^2.3.2"
+    "save": "^2.3.2",
+    "stop": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
